// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptTransferIntentions.remove > functionality > transfer intention is removed - as an intention account 1`] = `
{
  "updated": {
    "receipts": {
      "id:2343b24e-40d5-4945-8652-59d18facaee3": {
        "transferIntentionAccountId": null,
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;

exports[`receiptTransferIntentions.remove > functionality > transfer intention is removed - as an owner 1`] = `
{
  "updated": {
    "receipts": {
      "id:19c791d5-55c8-43d8-b262-1d53c20ac2a8": {
        "transferIntentionAccountId": null,
        "updatedAt": "2020-01-01T00:01:00.000Z",
      },
    },
  },
}
`;
